test/lit/pto/import_reserved_buffer_reject_user_ptodsl_like_symbol_a5.pto
// Copyright (c) 2026 Huawei Technologies Co., Ltd.
// This program is free software, you can redistribute it and/or modify it under the terms and conditions of
// CANN Open Software License Agreement Version 2.0 (the "License").
// Please refer to the License for details. You may not use this file except in compliance with the License.
// THIS SOFTWARE IS PROVIDED ON AN "AS IS" BASIS, WITHOUT WARRANTIES OF ANY KIND, EITHER EXPRESS OR IMPLIED,
// INCLUDING BUT NOT LIMITED TO NON-INFRINGEMENT, MERCHANTABILITY, OR FITNESS FOR A PARTICULAR PURPOSE.
// See LICENSE in the root of the software repository for the full text of the License.

// RUN: not ptoas --pto-arch=a5 %s 2>&1 | FileCheck %s
// Guards peer lookup: user-authored symbols containing "__ptodsl_" must not
// be treated as PTODSL ABI specializations unless they carry the logical-name attr.

module attributes {pto.target_arch = "a5"} {
  module attributes {pto.backend = "vpto"} {
    func.func @consumer() attributes {pto.kernel_kind = #pto.kernel_kind<vector>} {
      %peer = pto.import_reserved_buffer {name = "fifo", peer_func = @producer} -> i32
      return
    }
  }

  module attributes {pto.backend = "vpto"} {
    func.func public @producer__ptodsl_user()
        attributes {pto.kernel_kind = #pto.kernel_kind<cube>} {
      %buf = pto.reserve_buffer {
        name = "fifo",
        size = 4096,
        location = #pto.address_space<mat>,
        auto = true
      } -> i32
      return
    }
  }
}

// CHECK: error: 'pto.import_reserved_buffer' op expects 'peer_func' to reference an existing func.func
